syntax = "proto3";

package molecule;
option go_package = "./gometa";

message Node {
	message Table {
		string tableName = 1;

		message Col {
   		 	string columnName = 1;
   		 	string typeName = 2;
   		 	string label = 3;
			bool notnull = 4;
			bool constraint = 5;
			bool auto = 6;
			bool recurse = 7;
			string inOneof = 8;
		}
		repeated Col columns = 2;

		repeated string pks = 3;
		string idAuto = 4;

		message Fk {
			string fkTable = 1;
			string fkColumn = 2;
			string column = 3;
		}
		repeated Fk fks = 5;
		repeated string uniques = 6;
	}

	message Actions {
		enum ConnectType {
			CONNECTDefault = 0;
			CONNECTOne = 1;
			CONNECTArray = 2;
			CONNECTMap = 3;
			CONNECTMany = 4;
		}
	
		message Connection {
			string atomName = 1;
			string actionName = 2;	
			map<string, string> relateArgs = 3;
			map<string, string> relateExtra = 4;
			string marker = 5;
			ConnectType dimension = 6;
		}
	
		message Insert {
			string actionName = 1;
			repeated Connection prepareConnects = 2;
			repeated Connection nextpageConnects = 3;
			bool isDo = 4;
			repeated string picked = 7;
		}
		Insert insertItem = 7;
	
		message Update {
			string actionName = 1;
			repeated Connection prepareConnects = 2;
			repeated Connection nextpageConnects = 3;
			bool isDo = 4;
			repeated string empties = 5;
			repeated string picked = 7;
		}
		Update updateItem = 9;
	
		message Insupd {
			string actionName = 1;
			repeated Connection prepareConnects = 2;
			repeated Connection nextpageConnects = 3;
			bool isDo = 4;
			repeated string picked = 7;
		}
		Insupd insupdItem = 10;
	
		message Delete {
			string actionName = 1;
			repeated Connection prepareConnects = 2;
			repeated Connection nextpageConnects = 3;
			bool isDo = 4;
		}
		Delete deleteItem = 12;
	
		message Delecs {
			string actionName = 1;
			repeated Connection prepareConnects = 2;
			repeated Connection nextpageConnects = 3;
			bool isDo = 4;
		}
		Delecs delecsItem = 13;
	
		message Joint {
			string tableName = 1;
			string alias = 2;
			string joinType  = 3;
			string joinUsing = 4;
			string joinOn    = 5;
			string sortby = 6;
		}
	
		message Edit {
			string actionName = 1;
			repeated Connection prepareConnects = 2;
			repeated Connection nextpageConnects = 3;
			bool isDo = 4;
			repeated string picked = 7;
   		 	string FIELDS = 15;
		}
		Edit editItem = 14;
	
		message Topics {
			string actionName = 1;
			repeated Connection prepareConnects = 2;
			repeated Connection nextpageConnects = 3;
			bool isDo = 4;
			repeated string picked = 7;
   		 	int32 totalforce = 8;
   			string MAXPAGENO = 9;
   			string TOTALNO   = 10;
   			string PAGESIZE  = 11;
   			string PAGENO    = 12;
   			string SORTBY    = 13;
   			string SORTREVERSE = 14;
   		 	string FIELDS = 15;
		}
		Topics topicsItem = 15;
	}

	string atomName = 1;
	Table atomTable = 2;
	Actions atomActions = 3;
}

// Graph
message Graph {
  string packageName = 1;
  string goPackageName = 2;
  int32 dBDriver = 3;
  string pkTable = 4;
  string pkName = 5;
  map<string, string> pksTable = 6;
  map<string, string> pks = 7;
  repeated Node nodes = 8;
}
